packages/voltaire-c/include/voltaire.h

/* ============================================================================
 * Types
 * ========================================================================= */

typedef struct {
    unsigned char bytes[20];
} PrimitivesAddress;
typedef struct {
    unsigned char bytes[32];
} PrimitivesHash;
typedef struct {
    unsigned char bytes[32];
} PrimitivesU256;
typedef struct {
    unsigned char r[32];
    unsigned char s[32];
    unsigned char v;
} PrimitivesSignature;
/* ============================================================================
 * Address API
 * ========================================================================= */

int primitives_address_from_hex(const char* hex, PrimitivesAddress* out);
int primitives_address_to_hex(const PrimitivesAddress* address, unsigned char* buf);
int primitives_address_to_checksum_hex(const PrimitivesAddress* address, unsigned char* buf);
bool primitives_address_is_zero(const PrimitivesAddress* address);
bool primitives_address_equals(const PrimitivesAddress* a, const PrimitivesAddress* b);
bool primitives_address_validate_checksum(const char* hex);
int primitives_calculate_create_address(const PrimitivesAddress* sender, uint64_t nonce, PrimitivesAddress* out);
int primitives_calculate_create2_address(const PrimitivesAddress* sender, const unsigned char salt[32], const unsigned char* init_code, size_t init_code_len, PrimitivesAddress* out);
/* ============================================================================
 * Hash API
 * ========================================================================= */

int primitives_keccak256(const unsigned char* data, size_t data_len, PrimitivesHash* out_hash);
int primitives_hash_to_hex(const PrimitivesHash* hash, unsigned char* buf);
int primitives_hash_from_hex(const char* hex, PrimitivesHash* out_hash);
bool primitives_hash_equals(const PrimitivesHash* a, const PrimitivesHash* b);
int primitives_eip191_hash_message(const unsigned char* message, size_t message_len, PrimitivesHash* out_hash);
int primitives_sha256(const unsigned char* data, size_t data_len, unsigned char out_hash[32]);
int primitives_ripemd160(const unsigned char* data, size_t data_len, unsigned char out_hash[20]);
int primitives_blake2b(const unsigned char* data, size_t data_len, unsigned char out_hash[64]);
/* ============================================================================
 * Hex API
 * ========================================================================= */

int primitives_hex_to_bytes(const char* hex, unsigned char* out_buf, size_t buf_len);
int primitives_bytes_to_hex(const unsigned char* data, size_t data_len, unsigned char* out_buf, size_t buf_len);
int primitives_u256_from_hex(const char* hex, PrimitivesU256* out_u256);
int primitives_u256_to_hex(const PrimitivesU256* value, unsigned char* buf, size_t buf_len);
/* ============================================================================
 * secp256k1 API
 * ========================================================================= */

int primitives_secp256k1_recover_pubkey(const unsigned char message_hash[32], const unsigned char r[32], const unsigned char s[32], unsigned char v, unsigned char out_pubkey[64]);
int primitives_secp256k1_recover_address(const unsigned char message_hash[32], const unsigned char r[32], const unsigned char s[32], unsigned char v, PrimitivesAddress* out_address);
int primitives_secp256k1_pubkey_from_private(const unsigned char private_key[32], unsigned char out_pubkey[64]);
/* ============================================================================
 * RLP API
 * ========================================================================= */

int primitives_rlp_encode_bytes(const unsigned char* data, size_t data_len, unsigned char* out_buf, size_t buf_len);
int primitives_rlp_encode_uint(const unsigned char value_bytes[32], unsigned char* out_buf, size_t buf_len);
int primitives_rlp_to_hex(const unsigned char* rlp_data, size_t rlp_len, unsigned char* out_buf, size_t buf_len);
int primitives_rlp_from_hex(const char* hex, unsigned char* out_buf, size_t buf_len);
/* ============================================================================
 * ABI API
 * ========================================================================= */

int primitives_abi_compute_selector(const char* signature, unsigned char out_selector[4]);
int primitives_abi_encode_parameters(const char* types_json, const char* values_json, unsigned char* out_buf, size_t buf_len);
int primitives_abi_decode_parameters(const unsigned char* data, size_t data_len, const char* types_json, unsigned char* out_buf, size_t buf_len);
int primitives_abi_encode_function_data(const char* signature, const char* types_json, const char* values_json, unsigned char* out_buf, size_t buf_len);
int primitives_abi_decode_function_data(const unsigned char* data, size_t data_len, const char* types_json, unsigned char out_selector[4], unsigned char* out_buf, size_t buf_len);
int primitives_abi_encode_packed(const char* types_json, const char* values_json, unsigned char* out_buf, size_t buf_len);
long long primitives_abi_estimate_gas(const unsigned char* data, size_t data_len);
/* ============================================================================
 * Transaction API
 * ========================================================================= */

int primitives_tx_detect_type(const unsigned char* data, size_t data_len);
/* ============================================================================
 * Bytecode API
 * ========================================================================= */

int primitives_bytecode_analyze_jumpdests(const unsigned char* code, size_t code_len, uint32_t* out_jumpdests, size_t max_jumpdests);
bool primitives_bytecode_is_boundary(const unsigned char* code, size_t code_len, uint32_t position);
bool primitives_bytecode_is_valid_jumpdest(const unsigned char* code, size_t code_len, uint32_t position);
int primitives_bytecode_validate(const unsigned char* code, size_t code_len);